# solver_ws

./: README.md
src/solver_description/: CMakeLists.txt  package.xml
src/solver_description/launcher/: launcher_colision_actor.launch  launcher_empty_world.launch
src/solver_description/meshes/: Fender_L.dae  Fender_R.dae  Front_Light.dae  T__proc_notices_notices_070_k_notice_doc_66443_577111259.doc  aleron_frontal.dae  baseCaja.dae  bumpers.dae  cover.dae  lidar_am12.stl  piso.dae  screw_hex.dae  tapacaja.stl  untitled.dae  wheelv3.dae
src/solver_description/src/: camera_read.py  lidar_read.py
src/solver_description/urdf/: camera.xacro  floor.urdf.xacro  lidar.xacro  robot.gazebo  solver.xacro  solver_body.xacro  solver_wheel.xacro
src/solver_description/world/: actor_collisions.world  actor_demo.world  solo_solver.world
